# Primitive-Engine

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp
src/config/: config.cpp  config.hpp
src/core/: camera.cpp  camera.hpp  object.cpp  object.hpp
src/core/light/: light.cpp  light.hpp  point.cpp  point.hpp  spot.cpp  spot.hpp
src/core/physics/: physics.cpp  physics.hpp
src/debug/: debug.cpp  debug.hpp
src/engine/: loop.cpp  loop.hpp  window.cpp  window.hpp
src/file/: file.cpp  file.hpp
src/graphics/: mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
src/objects/: cube.hpp  custom.hpp  quad.hpp  scene.cpp  scene.hpp  shapes.hpp  sound.cpp  sound.hpp
src/objects/base/: shape.cpp  shape.hpp
src/objects/camera/: camera.cpp  camera.hpp
src/render/loop/: loop.cpp  loop.hpp
src/render/shaders/: shader.cpp
src/render/win/: window.cpp  window.hpp
src/utils/: config.cpp  config.hpp  debug.cpp  debug.hpp  file.cpp  file.hpp  more.cpp
